# lms

./: .gitignore  manage.py  pyproject.toml
LeadManagementSystemProject/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: style.css
templates/: base.html  input_animation.html  request.html
templates/webapp/: dashboard.html  notification.html
templates/webapp/Customer/: customer_data.html  customer_eye_data.html  customer_form.html  customer_update_form.html
templates/webapp/admin_client/: admin_client_change_password_form.html  admin_client_user_view.html  admin_profile.html  admin_user_create_form.html  admin_user_data.html  admin_user_update_form.html  client_user_create_form.html
templates/webapp/authentication/: login.html  logout.html
templates/webapp/lead_source/: lead_source_create_form.html  lead_source_update_form.html  lead_sources.html
templates/webapp/lead_status/: lead_status.html  lead_status_create.html  lead_status_create_form.html  lead_status_update_form.html
templates/webapp/lead_view/: lead_create_form.html  lead_history_eye_data.html  lead_history_form.html  lead_update_form.html  lead_view.html  new_lead_view.html
webapp/: admin.py  apps.py  filters.py  forms.py  models.py  signals.py  urls.py  views.py  webhook.py
webapp/migrations/: 0001_initial.py  0002_customer.py  0003_auto_20210313_1300.py  0004_auto_20210313_1942.py  0005_auto_20210313_1955.py
